[project]
name = "baby_ai_langchain"
version = "0.1.0"
description = "A simple baby care chatbot using Langchain and FastAPI."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "langchain>=0.1.0,<0.2.0",
    "langchain-google-genai>=1.0.0,<2.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "supabase>=2.0.0,<3.0.0"
]

[project.scripts]
start_server = "main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "main.py",
    "supabase_tools.py"
]
